Iteration 2 (Interface graphique realiser)

--- a/Projet2_onlinebanking/Projet2_onlinebanking/Site.Master
+++ b/Projet2_onlinebanking/Projet2_onlinebanking/Site.Master
@@ -2,20 +2,21 @@
 
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="fr">
 <head runat="server">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%: Page.Title %> - My ASP.NET Application</title>
+    <title><%: Page.Title %> - Projet2_OnlineBanking</title>
 
     <asp:PlaceHolder runat="server">
         <%: Scripts.Render("~/bundles/modernizr") %>
     </asp:PlaceHolder>
     <webopt:bundlereference runat="server" path="~/Content/css" />
-    <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <link href="" rel="shortcut icon" type="image/x-icon" />
 
 </head>
-<body>
+<body style="background-image:url();">
     <form runat="server">
         <asp:ScriptManager runat="server">
             <Scripts>
@@ -46,39 +47,48 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" runat="server" href="~/">Application name</a>
+                    <a class="navbar-brand" runat="server" href="~/">OnlineBanking</a>
                 </div>
                 <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">
-                        <li><a runat="server" href="~/">Home</a></li>
-                        <li><a runat="server" href="~/About">About</a></li>
+                    <ul runat="server" class="nav navbar-nav">
+                        <li><a runat="server" href="~/">Accueil</a></li>
+                        <li><a runat="server" href="~/About?data=Lionel">À propos de</a></li>
                         <li><a runat="server" href="~/Contact">Contact</a></li>
+
+                        <li><a id="admin" runat="server" href="~/banque/Listbalances">Gerer comptes clients</a></li>
+
+                        <li><a id="customer" runat="server" href="~/banque/customerspace">Mon Espace</a></li>
+
                     </ul>
-                    <asp:LoginView runat="server" ViewStateMode="Disabled">
-                        <AnonymousTemplate>
-                            <ul class="nav navbar-nav navbar-right">
-                                <li><a runat="server" href="~/Account/Register">Register</a></li>
-                                <li><a runat="server" href="~/Account/Login">Log in</a></li>
+
+
+                    <asp:LoginView ID="conexion" runat="server" ViewStateMode="Disabled">
+                        <AnonymousTemplate >
+                            <ul runat="server" class="nav navbar-nav navbar-right">
+                                <li><a runat="server" href="~/Account/Login">Se connecter</a></li>
                             </ul>
                         </AnonymousTemplate>
                         <LoggedInTemplate>
                             <ul class="nav navbar-nav navbar-right">
-                                <li><a runat="server" href="~/Account/Manage" title="Manage your account">Hello, <%: Context.User.Identity.GetUserName()  %> !</a></li>
+                                <li><a runat="server" id="getuser" href="~/Account/Manage" title="Manage your account">Hello, <%: Context.User.Identity.GetUserName()  %> !</a></li>
                                 <li>
-                                    <asp:LoginStatus runat="server" LogoutAction="Redirect" LogoutText="Log off" LogoutPageUrl="~/" OnLoggingOut="Unnamed_LoggingOut" />
+                                    <asp:LoginStatus runat="server" LogoutAction="Redirect" LogoutText="Se déconnecter" LogoutPageUrl="~/" OnLoggingOut="Unnamed_LoggingOut" />
                                 </li>
                             </ul>
                         </LoggedInTemplate>
                     </asp:LoginView>
+
+
                 </div>
             </div>
         </div>
         <div class="container body-content">
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
+                
             </asp:ContentPlaceHolder>
             <hr />
             <footer>
-                <p>&copy; <%: DateTime.Now.Year %> - My ASP.NET Application</p>
+                <p>&copy; <%: DateTime.Now.Year %> - Lionel & Yazid, TP2</p>
             </footer>
         </div>
     </form>
